--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^6.0.1",
     "antd": "^4.17.4",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
