--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@microsoft/signalr": "^6.0.1",
     "antd": "^4.17.4",
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
