--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@microsoft/signalr": "^6.0.1",
     "antd": "^4.17.4",
     "axios": "^0.24.0",
+    "magic-snowflakes": "^6.0.1",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
